Work but hopper doesn't work & download is broken && jukebox too